--- a/add-on/pom.xml
+++ b/add-on/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.vaadin.ui</groupId>
+	<groupId>com.vaadin.addon.responsive</groupId>
 	<artifactId>responsive</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0.alpha1</version>
-	<name>Responsive Add-on</name>
+	<version>1.0-SNAPSHOT</version>
+	<name>Vaadin Responsive</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +16,7 @@
 
        
 	<organization>
-		<name>Vaadin LTd.</name>
+		<name>Vaadin Ltd.</name>
 		<url>https://github.com/vaadin/</url>
 	</organization>
     
@@ -112,7 +112,7 @@
 						<manifestEntries>
 							<!-- Package format version - do not change -->
 							<Vaadin-Package-Version>1</Vaadin-Package-Version>
-							<Vaadin-Widgetsets>com.vaadin.ui.ResponsiveWidgetSet</Vaadin-Widgetsets>
+							<Vaadin-Widgetsets>com.vaadin.addon.responsive.ResponsiveWidgetSet</Vaadin-Widgetsets>
 						</manifestEntries>
 					</archive>
 				</configuration>
