--- a/add-on/pom.xml
+++ b/add-on/pom.xml
@@ -8,18 +8,62 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>Vaadin Responsive</name>
 
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.1.2</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.2.1</version>
+						<configuration>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptors>
+								<descriptor>assembly.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<vaadin.version>7.0.4</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 	</properties>
 
-       
+
 	<organization>
 		<name>Vaadin Ltd.</name>
 		<url>https://github.com/vaadin/</url>
 	</organization>
-    
+
 	<scm>
 		<url>git://github.com/vaadin/responsive.git</url>
 		<connection>scm:git:git://github.com/vaadin/responsive.git</connection>
@@ -31,7 +75,12 @@
 		<system>GitHub</system>
 		<url>https://github.com/vaadin/responsive/issues</url>
 	</issueManagement>
-   
+
+	<developers>
+		<developer>
+			<name>Jouni Koivuviita</name>
+		</developer>
+	</developers>
 
 	<licenses>
 		<license>
@@ -117,7 +166,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -148,20 +197,20 @@
 
 		</plugins>
 
-		<!-- This is needed for the sources required by the client-side compiler to be 
-			included in the produced JARs -->
+		<!-- This is needed for the sources required by the client-side compiler 
+			to be included in the produced JARs -->
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
 				<excludes>
-                    <exclude>rebel.xml</exclude>
-                </excludes>
+					<exclude>rebel.xml</exclude>
+				</excludes>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
-		
+
 	</build>
 
 </project>
